[package]
name = "sorting_service"
version = "0.1.0"
authors = ["Telmo \"Trooper\" <telmo.trooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = "1.0.104"
env_logger = "0.7.1"
serde_json = "1.0.56"
