[package]
name = "sorting_service"
version = "0.1.0"
authors = ["Telmo \"Trooper\" <telmo.trooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
env_logger = "0.8.2"
serde = "1.0.117"
serde_json = "1.0.60"
